refactor: unify controllers and services structure (#10)
Co-authored-by: ruti_cohen <r0583283575@gmail.com>